fix css z-index

--- a/public_html/vue/order/order-edit.css
+++ b/public_html/vue/order/order-edit.css
@@ -62,3 +62,6 @@
 .dropdown-menu {
     z-index: 9999;
 }
+input.form-control {
+    z-index: 1;
+}
